--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,8 @@ body{
 .greetings > span:nth-child(5){
     animation-delay: .8s;
 }
+.greetings > span:nth-child(6){
+    animation-delay: .10s;
 
 .description{
     font-size: 1.5rem;
